@@ -29,6 +29,7 @@
     <conf name="master"/>
     <conf name="default"/>
     <conf name="test"/>
+    <conf name="mvn-ant-task" visibility="private"/>
     <conf name="package" extends="master"/>
     <conf name="jdiff" visibility="private"/>
     <conf name="releaseaudit" visibility="private" description="Artifacts required for releaseaudit target"/>
@@ -42,6 +43,8 @@
     <dependency org="org.slf4j" name="slf4j-api" rev="${slf4j.version}"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="${slf4j.version}" transitive="false"/>
 
+    <dependency org="org.apache.maven.wagon" name="wagon-http" rev="2.4" conf="mvn-ant-task->default"/>
+    <dependency org="org.apache.maven" name="maven-ant-tasks" rev="2.1.3" conf="mvn-ant-task->default"/>
     <!-- transitive false turns off dependency checking, log4j deps seem borked -->
     <dependency org="log4j" name="log4j" rev="${log4j.version}" transitive="false" conf="default"/>
     <dependency org="jline" name="jline" rev="${jline.version}" transitive="false" conf="default"/>
