@@ -178,6 +178,9 @@ IMPROVEMENTS:
 
   ZOOKEEPER-2402: Document client side properties (Arshad Mohammad via fpj)
 
+  ZOOKEEPER-1430. add maven deploy support to the build
+  (Giridharan Kesavan via phunt)
+
 Release 3.4.5 - 2012-09-30
 
 Backward compatible changes:
